<resources>
    <string name="app_name">XKCDC Viewer</string>
    <string name="title_browse">Browse</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="go_to_button">Go To #</string>
    <string name="comic_number_and_title">%1$d - %2$s</string>
    <string name="comic_number_hint">XKCD number</string>
    <string name="go_to_specific_comic">Go to specific comic</string>
    <string name="enter_a_valid_number">Enter a valid comic number</string>
    <string name="search_button">Search</string>
    <string name="search_hint">Search words or sentences</string>
    <string name="percent_match">Percent Match: %1$s&#65130;</string>
    <string name="add_favorite">Add favorite</string>
    <string name="share_comic">Share comic</string>
    <string name="empty_favorites_message">You have no favorites, try adding some and coming back.</string>
</resources>