<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_browse">

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.jorbital.xkcdcviewer.ui.browse.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/browse_fragment" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.jorbital.xkcdcviewer.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.jorbital.xkcdcviewer.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/favorites_fragment" />
</navigation>